@@ -14,6 +14,9 @@
   * pkg_write_*: Reliably use archive-specific dependencies list when
     available
 
+  * New option --skip-free-space-check: Bypass free space check, create
+    temporary directories under $TMPDIR, defaults to /tmp
+
 2.10.5
 
   * select_package_architecture: Fix bug when using --architecture=64 (or
